Bug 468197 - 16 bit psd files saved from photoshop show corrupted layers
Summary: 16 bit psd files saved from photoshop show corrupted layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL: https://invent.kde.org/graphics/krita...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-06 09:34 UTC by Raghavendra kamath
Modified: 2023-12-14 03:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Demo 16-bit RGBA (1.02 MB, image/vnd.adobe.photoshop)
2023-04-21 00:16 UTC, amyspark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2023-04-06 09:34:34 UTC
SUMMARY
PSD files which are saved from photoshop and which have 16 bit integer channel rgb colour profiles show corrupted layers. The layers will have glitched data rendering the file useless.

I think Krita is is not importing the file properly. 16 bit PSD files which are saved from krita open properly.
Here is a test file for your reference. (The file size is a bit large so adding cloud link)
https://box.raghukamath.com/cloud/index.php/s/go5BDw78oAkxsNq

This issue was also encountered by on of the krita-artists members. here is the post - https://krita-artists.org/t/psds-loading-corrupted/59057

STEPS TO REPRODUCE
1. Download the test file from here 
2. Open the file in krita


OBSERVED RESULT
Colours are glitched on all layers

EXPECTED RESULT
Colours and the file should appear normal with supported features.

System information -

Krita

 Version: 5.2.0-prealpha (git 9920d23)
 Hidpi: true

Qt

  Version (compiled): 5.15.7
  Version (loaded): 5.15.7

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 6.2.9-200.fc37.x86_64
  Pretty Productname: Fedora Linux 37 (KDE Plasma)
  Product Type: fedora
  Product Version: 37
  Desktop: KDE

Locale

  Languages: en_US
  C locale: hi_IN.UTF-8
  QLocale current: en
  QLocale system: hi
  QTextCodec for locale: UTF-8

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "NVIDIA GeForce GTX 750 Ti/PCIe/SSE2" 
  Driver version:  "4.6.0 NVIDIA 530.41.03" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.3, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  GL version: 4.6 
  Supports deprecated functions false 
  Is OpenGL ES: false 
  supportsBufferMapping: true 
  supportsBufferInvalidation: true 
  forceDisableTextureBuffers: false 
  Extensions: 
     GL_NV_parameter_buffer_object 
     GL_NV_texture_rectangle 
     GL_ARB_shader_objects 
     GL_OVR_multiview2 
     GL_EXT_texture_compression_latc 
     GL_ARB_gpu_shader5 
     GL_ARB_point_sprite 
     GL_ARB_explicit_uniform_location 
     GL_NV_vertex_array_range2 
     GL_ARB_copy_buffer 
     GL_ARB_map_buffer_alignment 
     GL_NV_draw_vulkan_image 
     GL_ARB_sparse_buffer 
     GL_EXT_blend_equation_separate 
     GL_KHR_debug 
     GL_NV_explicit_multisample 
     GL_NV_occlusion_query 
     GL_EXT_texture_env_add 
     GL_ARB_shading_language_include 
     GL_ARB_cull_distance 
     GL_NV_gpu_program4_1 
     GL_NV_uniform_buffer_unified_memory 
     GL_NV_ES1_1_compatibility 
     GL_ARB_texture_query_levels 
     GL_ARB_seamless_cube_map 
     GL_ARB_shader_draw_parameters 
     GL_NV_fragment_program_option 
     GL_NV_vdpau_interop 
     GL_EXT_vertex_array 
     GL_ARB_stencil_texturing 
     GL_EXT_texture_compression_dxt1 
     GL_NV_vertex_program2 
     GL_ARB_tessellation_shader 
     GL_NV_fence 
     GL_ARB_invalidate_subdata 
     GL_ARB_framebuffer_object 
     GL_ARB_texture_env_combine 
     GL_ARB_texture_compression_bptc 
     GL_ARB_half_float_vertex 
     GL_ARB_gl_spirv 
     GL_NV_packed_depth_stencil 
     GL_KHR_shader_subgroup 
     GL_ARB_arrays_of_arrays 
     GL_NV_draw_texture 
     GL_EXT_provoking_vertex 
     GL_ARB_transpose_matrix 
     GL_ARB_indirect_parameters 
     GL_ARB_shader_image_load_store 
     GL_EXT_stencil_wrap 
     GL_EXT_stencil_two_side 
     GL_EXT_texture_env_dot3 
     GL_ARB_query_buffer_object 
     GL_NV_texture_shader2 
     GL_EXT_blend_func_separate 
     GL_NV_bindless_multi_draw_indirect 
     GL_ATI_draw_buffers 
     GL_ARB_depth_clamp 
     GL_NV_blend_minmax_factor 
     GL_EXT_texture_edge_clamp 
     GL_EXT_vertex_array_bgra 
     GL_ARB_texture_rg 
     GL_NV_conditional_render 
     GL_NV_shader_thread_group 
     GL_ARB_robust_buffer_access_behavior 
     GL_NV_texgen_reflection 
     GL_ARB_texture_float 
     GL_NV_gpu_shader5 
     GL_ARB_map_buffer_range 
     GL_NV_robustness_video_memory_purge 
     GL_ARB_vertex_shader 
     GL_ARB_robustness 
     GL_ARB_vertex_attrib_binding 
     GL_NV_gpu_program4 
     GL_AMD_seamless_cubemap_per_texture 
     GL_EXT_geometry_shader4 
     GL_EXT_semaphore_fd 
     GL_ARB_copy_image 
     GL_NV_float_buffer 
     GL_ARB_texture_swizzle 
     GL_EXT_transform_feedback2 
     GL_EXT_x11_sync_object 
     GL_EXT_shadow_funcs 
     GL_NV_geometry_shader4 
     GL_NV_shader_storage_buffer_object 
     GL_EXT_gpu_shader4 
     GL_ARB_texture_stencil8 
     GL_NV_shader_atomic_float 
     GL_SGIX_shadow 
     GL_ARB_texture_filter_anisotropic 
     GL_NV_pixel_data_range 
     GL_EXT_timer_query 
     GL_ARB_shadow 
     GL_EXT_blend_color 
     GL_ARB_shading_language_100 
     GL_NV_light_max_exponent 
     GL_NV_point_sprite 
     GL_ARB_texture_env_crossbar 
     GL_ARB_provoking_vertex 
     GL_EXT_texture_buffer_object 
     GL_EXT_draw_instanced 
     GL_ARB_fragment_shader 
     GL_ARB_clip_control 
     GL_ARB_point_parameters 
     GL_EXT_memory_object_fd 
     GL_ARB_bindless_texture 
     GL_ARB_blend_func_extended 
     GL_ARB_spirv_extensions 
     GL_EXT_polygon_offset_clamp 
     GL_ARB_framebuffer_sRGB 
     GL_ARB_texture_border_clamp 
     GL_NV_multisample_coverage 
     GL_ARB_vertex_type_10f_11f_11f_rev 
     GL_ARB_buffer_storage 
     GL_ARB_viewport_array 
     GL_EXT_vertex_attrib_64bit 
     GL_ARB_shader_clock 
     GL_EXT_memory_object 
     GL_NV_internalformat_sample_query 
     GL_EXT_texture_shadow_lod 
     GL_ARB_imaging 
     GL_EXT_texture_compression_s3tc 
     GL_NV_command_list 
     GL_NV_register_combiners 
     GL_ARB_program_interface_query 
     GL_NV_parameter_buffer_object2 
     GL_EXT_semaphore 
     GL_ARB_texture_mirrored_repeat 
     GL_ARB_texture_buffer_object_rgb32 
     GL_EXT_texture_array 
     GL_EXT_window_rectangles 
     GL_EXT_fog_coord 
     GL_NV_gpu_program5_mem_extended 
     GL_EXT_separate_specular_color 
     GL_EXT_packed_pixels 
     GL_ARB_gpu_shader_fp64 
     GL_ARB_timer_query 
     GL_EXT_draw_range_elements 
     GL_KHR_parallel_shader_compile 
     GL_ARB_enhanced_layouts 
     GL_NV_framebuffer_multisample_coverage 
     GL_ARB_ES2_compatibility 
     GL_ATI_texture_mirror_once 
     GL_NV_vertex_program 
     GL_SUN_slice_accum 
     GL_EXT_packed_float 
     GL_NV_texture_barrier 
     GL_ARB_internalformat_query 
     GL_ARB_fragment_program 
     GL_ARB_base_instance 
     GL_ARB_texture_storage 
     GL_NV_shader_buffer_load 
     GL_ARB_draw_buffers 
     GL_NV_primitive_restart 
     GL_ARB_ES3_compatibility 
     GL_EXT_texture_cube_map 
     GL_EXT_texture_lod_bias 
     GL_ARB_transform_feedback3 
     GL_EXT_texture_object 
     GL_NV_gpu_multicast 
     GL_ARB_texture_rectangle 
     GL_SGIX_depth_texture 
     GL_KHR_blend_equation_advanced_coherent 
     GL_ARB_sync 
     GL_NV_depth_buffer_float 
     GL_ARB_compatibility 
     GL_NV_blend_square 
     GL_NVX_gpu_memory_info 
     GL_ARB_shader_image_size 
     GL_ARB_depth_buffer_float 
     GL_ARB_explicit_attrib_location 
     GL_NV_blend_equation_advanced 
     GL_NV_copy_image 
     GL_NV_transform_feedback 
     GL_ARB_shader_texture_image_samples 
     GL_EXT_shader_integer_mix 
     GL_EXT_blend_subtract 
     GL_ARB_clear_buffer_object 
     GL_NV_fog_distance 
     GL_EXT_shader_image_load_formatted 
     GL_NV_uniform_buffer_std430_layout 
     GL_EXT_secondary_color 
     GL_NV_texture_shader 
     GL_ARB_parallel_shader_compile 
     GL_NV_texture_env_combine4 
     GL_EXT_bgra 
     GL_SGIS_generate_mipmap 
     GL_ARB_multisample 
     GL_EXT_texture_compression_rgtc 
     GL_ARB_draw_indirect 
     GL_ARB_transform_feedback2 
     GL_EXT_texture_mirror_clamp 
     GL_NV_gpu_program5 
     GL_SGIS_texture_lod 
     GL_EXT_texture_shared_exponent 
     GL_AMD_multi_draw_indirect 
     GL_ARB_ES3_1_compatibility 
     GL_OVR_multiview 
     GL_ARB_vertex_array_object 
     GL_NVX_nvenc_interop 
     GL_NV_shader_thread_shuffle 
     GL_ARB_compute_shader 
     GL_ARB_texture_view 
     GL_ARB_seamless_cubemap_per_texture 
     GL_S3_s3tc 
     GL_ARB_shader_storage_buffer_object 
     GL_ARB_texture_compression_rgtc 
     GL_ATI_texture_float 
     GL_EXT_draw_buffers2 
     GL_NV_vertex_program3 
     GL_NV_transform_feedback2 
     GL_NV_fragment_program 
     GL_ARB_occlusion_query2 
     GL_NV_path_rendering 
     GL_EXT_framebuffer_multisample 
     GL_ARB_shader_precision 
     GL_EXT_depth_bounds_test 
     GL_ARB_depth_texture 
     GL_EXT_blend_minmax 
     GL_ARB_vertex_type_2_10_10_10_rev 
     GL_NV_multisample_filter_hint 
     GL_ARB_shading_language_packing 
     GL_ARB_sample_shading 
     GL_ARB_vertex_array_bgra 
     GL_EXT_separate_shader_objects 
     GL_EXT_texture_filter_anisotropic 
     GL_ARB_pixel_buffer_object 
     GL_ARB_polygon_offset_clamp 
     GL_NV_feature_query 
     GL_EXT_point_parameters 
     GL_ARB_debug_output 
     GL_EXT_import_sync_object 
     GL_NV_vertex_buffer_unified_memory 
     GL_ARB_compressed_texture_pixel_storage 
     GL_NVX_progress_fence 
     GL_ARB_get_texture_sub_image 
     GL_EXT_framebuffer_multisample_blit_scaled 
     GL_EXT_multiview_timer_query 
     GL_ARB_instanced_arrays 
     GL_ARB_occlusion_query 
     GL_ARB_fragment_program_shadow 
     GL_ARB_texture_compression 
     GL_ARB_shading_language_420pack 
     GL_ARB_draw_elements_base_vertex 
     GL_ARB_texture_barrier 
     GL_ARB_texture_multisample 
     GL_ARB_sampler_objects 
     GL_ARB_shader_atomic_counter_ops 
     GL_ARB_texture_gather 
     GL_ARB_texture_env_add 
     GL_NV_gpu_program_fp64 
     GL_ARB_get_program_binary 
     GL_NV_vertex_program1_1 
     GL_ARB_ES3_2_compatibility 
     GL_ARB_texture_cube_map_array 
     GL_KHR_no_error 
     GL_ARB_framebuffer_no_attachments 
     GL_NV_query_resource 
     GL_ARB_shader_bit_encoding 
     GL_ARB_draw_buffers_blend 
     GL_NV_vertex_attrib_integer_64bit 
     GL_NV_texture_compression_vtc 
     GL_ARB_multi_draw_indirect 
     GL_ARB_multitexture 
     GL_ARB_clear_texture 
     GL_ARB_fragment_layer_viewport 
     GL_KTX_buffer_region 
     GL_ARB_color_buffer_float 
     GL_EXT_texture_lod 
     GL_NV_texture_rectangle_compressed 
     GL_ARB_shader_atomic_counters 
     GL_NV_vertex_array_range 
     GL_ARB_multi_bind 
     GL_NV_vdpau_interop2 
     GL_EXT_abgr 
     GL_ARB_fragment_coord_conventions 
     GL_NVX_conditional_render 
     GL_NV_timeline_semaphore 
     GL_KHR_robust_buffer_access_behavior 
     GL_ARB_transform_feedback_overflow_query 
     GL_NV_fragment_program2 
     GL_KHR_robustness 
     GL_ARB_shader_group_vote 
     GL_ARB_texture_query_lod 
     GL_EXT_texture_swizzle 
     GL_ARB_half_float_pixel 
     GL_NV_bindless_multi_draw_indirect_count 
     GL_ARB_texture_non_power_of_two 
     GL_EXT_Cg_shader 
     GL_EXT_direct_state_access 
     GL_EXT_bindable_uniform 
     GL_NV_bindless_texture 
     GL_EXT_shader_image_load_store 
     GL_EXT_texture_integer 
     GL_NV_shader_subgroup_partitioned 
     GL_EXT_multiview_texture_multisample 
     GL_NV_depth_clamp 
     GL_ARB_derivative_control 
     GL_EXT_gpu_program_parameters 
     GL_ARB_texture_rgb10_a2ui 
     GL_ARB_shader_ballot 
     GL_EXT_texture3D 
     GL_NV_texture_multisample 
     GL_ARB_shader_subroutine 
     GL_IBM_rasterpos_clip 
     GL_NV_query_resource_tag 
     GL_NV_shader_atomic_int64 
     GL_EXT_multi_draw_arrays 
     GL_ARB_compute_variable_group_size 
     GL_IBM_texture_mirrored_repeat 
     GL_ARB_texture_buffer_range 
     GL_NV_ES3_1_compatibility 
     GL_ARB_texture_env_dot3 
     GL_KHR_context_flush_control 
     GL_ARB_gpu_shader_int64 
     GL_EXT_texture_sRGB_decode 
     GL_ARB_conditional_render_inverted 
     GL_ARB_pipeline_statistics_query 
     GL_NV_copy_depth_to_color 
     GL_EXT_texture_env_combine 
     GL_EXT_texture_sRGB 
     GL_EXT_framebuffer_sRGB 
     GL_NV_blend_equation_advanced_coherent 
     GL_EXTX_framebuffer_mixed_formats 
     GL_ARB_direct_state_access 
     GL_ARB_conservative_depth 
     GL_EXT_rescale_normal 
     GL_ARB_texture_mirror_clamp_to_edge 
     GL_EXT_framebuffer_blit 
     GL_NV_texture_shader3 
     GL_ARB_uniform_buffer_object 
     GL_NV_register_combiners2 
     GL_NV_alpha_to_coverage_dither_control 
     GL_ARB_sparse_texture 
     GL_ARB_internalformat_query2 
     GL_ARB_texture_cube_map 
     GL_NV_vertex_program2_option 
     GL_NV_shader_atomic_counters 
     GL_EXT_compiled_vertex_array 
     GL_EXT_packed_depth_stencil 
     GL_ARB_vertex_attrib_64bit 
     GL_ARB_transform_feedback_instanced 
     GL_ARB_window_pos 
     GL_ARB_vertex_buffer_object 
     GL_KHR_blend_equation_advanced 
     GL_ARB_separate_shader_objects 
     GL_ARB_shader_texture_lod 
     GL_NV_compute_program5 
     GL_ARB_draw_instanced 
     GL_EXT_texture_sRGB_R8 
     GL_ARB_texture_storage_multisample 
     GL_EXT_framebuffer_object 
     GL_EXT_pixel_buffer_object 
     GL_EXT_texture_storage 
     GL_ARB_vertex_program 
     GL_NV_half_float 
     GL_ARB_geometry_shader4 
     GL_ARB_texture_buffer_object 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 
  Detected renderers: 
    (Supported) NVIDIA GeForce GTX 750 Ti/PCIe/SSE2 (OpenGL ES 3.2 NVIDIA 530.41.03) 
    (Supported) NVIDIA GeForce GTX 750 Ti/PCIe/SSE2 (4.6.0 NVIDIA 530.41.03)  

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 31862 Mb
  Number of Cores: 20
  Swap Location: /tmp
  Built for: sse2
  Base instruction set: fma3+avx2
  Supported instruction sets: fma3+avx2 avx2 fma3+avx avx fma4 fma3+sse4.2 sse4.2 sse4.1 ssse3 sse3 sse2 

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Resource Location: /home/raghu/store/Krita/nightly/krita-nightly.home/.local/share/krita
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Loaded Python Plugins
	colorspace
	comics_project_management_tools
	documenttools
	exportlayers
	filtermanager
	lastdocumentsdocker
	plugin_importer
	quick_settings_docker
	scripter
	tenbrushes
	tenscripts


Display Information
Number of screens: 1
	Screen: 0
		Name: DVI-D-0
		Depth: 24
		Scale: 1
		Physical DPI109.141
		Logical DPI96
		Physical Size: 596, 335
		Position: 0, 0
		Resolution in pixels: 2560x1440
		Manufacturer: BNQ
		Model: BenQ SW2700
		Refresh Rate: 59.9506
Comment 1 Halla Rempt 2023-04-06 09:35:57 UTC
Amyspark, I'm assigning this to you. We might have to backport a fix.
Comment 2 Raghavendra kamath 2023-04-06 09:36:35 UTC
Another krita-artists user reporting the same -
https://krita-artists.org/t/16bit-psd-files/52365
Comment 3 amyspark 2023-04-09 12:08:58 UTC
(In reply to Halla Rempt from comment #1)
> Amyspark, I'm assigning this to you. We might have to backport a fix.

Ack. I'll start getting back to things on Monday.
Comment 4 amyspark 2023-04-21 00:16:56 UTC
Created attachment 158254 [details]
Demo 16-bit RGBA

Hi! Could you upload the test file again? I tested here with this RGBA 16-bit file and it loads correctly in master.

(The file was roundtripped from a 16-bit KRA into a PSD with Krita, then loaded again.)
Comment 5 amyspark 2023-04-21 00:17:28 UTC
(marking as needsinfo separately as I need the demo file and the affected version)
Comment 6 Raghavendra kamath 2023-04-21 11:47:26 UTC
Here is the test file

https://box.raghukamath.com/cloud/index.php/s/xQLfY5BywGBxTdC

Sorry it got deleted when I migrated my files to some other drive.

This file and all other files saved from photoshop in 16 bit do not load in krita. You can also create a file from photoshop in 16 bit rgb and then test again.
Comment 7 amyspark 2023-04-21 16:09:50 UTC
I could reproduce on commit c141022 in macOS, so assigning to myself.
Comment 8 amyspark 2023-04-22 02:18:37 UTC
Fixed in tonight's nightlies.
Comment 9 amyspark 2023-12-14 03:26:05 UTC
Git commit ed2ac4cb7ec8532d46238be51896a1d1bc9fd319 by L. E. Segovia.
Committed on 22/04/2023 at 02:17.
Pushed by lsegovia into branch 'krita/5.1'.

PSD: fix using implementation-defined signedness when using ZIP with prediction

It appears that all high bit depth PSDs use prediction.

While at it, also clean up the implementation a bit to make it more
readable.
(cherry picked from commit d2a64155c02e7b5bd1e1124a40bf53b65c52006f)

M  +97   -44   libs/psdutils/compression.cpp

https://invent.kde.org/graphics/krita/commit/ed2ac4cb7ec8532d46238be51896a1d1bc9fd319
Comment 10 amyspark 2023-12-14 03:26:05 UTC
Git commit ed2ac4cb7ec8532d46238be51896a1d1bc9fd319 by L. E. Segovia.
Committed on 22/04/2023 at 02:17.
Pushed by lsegovia into branch 'krita/5.1'.

PSD: fix using implementation-defined signedness when using ZIP with prediction

It appears that all high bit depth PSDs use prediction.

While at it, also clean up the implementation a bit to make it more
readable.
(cherry picked from commit d2a64155c02e7b5bd1e1124a40bf53b65c52006f)

M  +97   -44   libs/psdutils/compression.cpp

https://invent.kde.org/graphics/krita/commit/ed2ac4cb7ec8532d46238be51896a1d1bc9fd319
Comment 11 amyspark 2023-12-14 03:26:12 UTC
Git commit d2a64155c02e7b5bd1e1124a40bf53b65c52006f by L. E. Segovia.
Committed on 22/04/2023 at 02:16.
Pushed by lsegovia into branch 'master'.

PSD: fix using implementation-defined signedness when using ZIP with prediction

It appears that all high bit depth PSDs use prediction.

While at it, also clean up the implementation a bit to make it more
readable.

M  +97   -44   libs/psdutils/compression.cpp

https://invent.kde.org/graphics/krita/commit/d2a64155c02e7b5bd1e1124a40bf53b65c52006f
Comment 12 amyspark 2023-12-14 03:26:12 UTC
Git commit d2a64155c02e7b5bd1e1124a40bf53b65c52006f by L. E. Segovia.
Committed on 22/04/2023 at 02:16.
Pushed by lsegovia into branch 'master'.

PSD: fix using implementation-defined signedness when using ZIP with prediction

It appears that all high bit depth PSDs use prediction.

While at it, also clean up the implementation a bit to make it more
readable.

M  +97   -44   libs/psdutils/compression.cpp

https://invent.kde.org/graphics/krita/commit/d2a64155c02e7b5bd1e1124a40bf53b65c52006f