PSD: fix using implementation-defined signedness when using ZIP with prediction

It appears that all high bit depth PSDs use prediction.

While at it, also clean up the implementation a bit to make it more
readable.

BUG:468197